Merged release 3.4.1 to fork of public repo (first public java 8 release). This is performed in order to move the development process of the non proprietary parts to github.